--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -88,22 +88,23 @@
     <span>Student Portal</span>
 </button>
 
-    <!-- Teachers Dashboard (load teachers.html in same tab) -->
-  <button class="module-item green"
-    onclick="window.location.href='/teachers';">
-      <i class="fa-solid fa-chalkboard-user"></i>
-      <span>Teachers Dashboard</span>
-  </button>
+<button class="module-item green" onclick="window.location.href='/admin/teachers'">
+    <i class="fa-solid fa-chalkboard-user"></i>
+    <span>Teachers Dashboard</span>
+</button>
+
+
 
   
 
 
-  <!-- Upload Exam (load teachers.html and jump to upload section) -->
- <button class="module-item purple"
-    onclick="window.location.href='/admin/uploads#upload-section';">
-      <i class="fa-solid fa-file-arrow-up"></i>
-      <span>Upload Exam</span>
-  </button>
+<button class="module-item purple uploads-btn"
+    onclick="window.location.href='/admin/teachers?open=uploads';">
+    <i class="fa-solid fa-file-arrow-up"></i>
+    <span>Upload Exam</span>
+</button>
+
+
 
 
 
